--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ astor==0.7.1
 bleach==1.5.0
 certifi==2019.3.9
 cycler==0.10.0
+datetime==3.0.3
+dj-database-url==0.5.0
 Django==2.2.5
 django-mysql==3.2.0
 gast==0.2.1.post0
@@ -18,8 +20,8 @@ Mako==1.0.7
 Markdown==2.6.11
 MarkupSafe==1.1.0
 matplotlib==3.0.2
-mkl-fft==1.0.10
-mkl-random==1.0.2
+mkl-fft==1.0.6
+mkl-random==1.0.1.1
 mpld3==0.3
 mysqlclient==1.3.13
 numpy==1.15.4
@@ -28,7 +30,6 @@ patsy==0.5.1
 Pillow==5.4.1
 plotly==4.2.1
 protobuf==3.6.1
-pygpu==0.7.6
 pykalman==0.9.5
 pyparsing==2.3.1
 pystocker==0.1.25
@@ -47,7 +48,8 @@ tensorflow==1.5.0
 tensorflow-tensorboard==1.5.1
 termcolor==1.1.0
 tflearn==0.3.2
-Theano==1.0.3+2.g3e47d39ac.dirty
+Theano==1.0.1
 tornado==5.1.1
 tqdm==4.31.1
 Werkzeug==0.14.1
+WhiteNoise==2.0.6
